--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Welcome to my castle.</h1>
     <img width = 800px src="./images/bonjourCastle.jpg" alt="castle">
+    <h2>castles are cool</h2>
 
 
     <script src="main.js"></script>
